--- a/frontend/src/components/Breadcrumbs.module.scss
+++ b/frontend/src/components/Breadcrumbs.module.scss
@@ -38,7 +38,7 @@
             content: "";
 
             display: inline-block;
-            margin: 0 0.7em 0 0.45em;
+            margin: 0 0.7em;
 
             width: 0.5em;
             height: 0.5em;
