make the icons visible

--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -125,6 +125,7 @@
 
                 svg {
                     width: 1.5em;
+                    color: var(--g1400);
                 }
             }
         }
