Move redecompilation to an editor tab & add fork diffing (#528)
* add lazy tab content rendering

* improve renderTab typing

* change decompilation modal to a tab

* diff decompilation against source code

* highlight different lines

* fix gutter to not mistakenly show removed lines

* clean up cod

* debounce decompilations

* diff code against parent scratch

* add compare forks setting

* fix breadcrumbs margin

* delay compare for editable codemirrors

* reduce rerenders when typing quickly

* add sanity check for doc-out-of-sync bug

* fix out-of-sync bug

* compare against fork parent when scratch is not modified

* make decompile tab dismissable

* fix stylelint

--- a/frontend/src/components/Tabs.module.scss
+++ b/frontend/src/components/Tabs.module.scss
@@ -39,7 +39,7 @@
     align-items: center;
     justify-content: center;
 
-    padding: 0 12px;
+    padding: 0 8px;
     min-width: 60px;
     min-height: 32px;
 
@@ -135,7 +135,7 @@
         width: 100%;
         height: 100%;
 
-        background: var(--a200);
+        background: var(--a50);
         border-radius: 6px;
 
         opacity: inherit;
@@ -163,4 +163,19 @@
 .tabPanelContent {
     flex: 1;
     overflow: hidden;
+}
+
+.closeButton {
+    background: transparent;
+    border: 0;
+
+    padding: 2px;
+    border-radius: 4px;
+
+    cursor: pointer;
+
+    &:hover,
+    &:active {
+        background: var(--a100);
+    }
 }
