style project description

--- a/frontend/src/pages/[project].module.scss
+++ b/frontend/src/pages/[project].module.scss
@@ -57,6 +57,9 @@
         color: var(--g1000);
         font-size: 0.9em;
         max-width: 50ch;
+
+        user-select: text;
+        white-space: pre;
     }
 }
 
