Revert "Frontend performance/accessiblity tweaks (#539)"
This reverts commit be2bb90c013702006ad12256552928e4a3d2e363.

--- a/frontend/src/pages/u/[username].module.scss
+++ b/frontend/src/pages/u/[username].module.scss
@@ -37,6 +37,7 @@ $pageWidth: 50em;
 .avatar {
     width: 64px;
     height: 64px;
+    background: #fff4;
     border-radius: 999px;
 }
 
@@ -52,12 +53,12 @@ $pageWidth: 50em;
     align-items: center;
     gap: 0.5em;
 
-    color: var(--g1200);
+    color: #888;
     font-weight: 400;
 }
 
 .username a:hover {
-    color: var(--g2000);
+    color: white;
 }
 
 .tabs {
