add projects list

--- a/frontend/src/pages/new.module.scss
+++ b/frontend/src/pages/new.module.scss
@@ -19,7 +19,7 @@
 .heading {
     background: var(--g300);
     padding: 1em;
-    user-select: auto;
+    user-select: text;
     align-self: stretch;
 
     .headingInner {
@@ -29,7 +29,7 @@
 
     h1 {
         color: var(--g1900);
-        font-size: 1.25em;
+        font-size: 1.5em;
         font-weight: 500;
     }
 
