--- a/frontend/src/pages/projects/[project]/functions/[function].module.scss
+++ b/frontend/src/pages/projects/[project]/functions/[function].module.scss
@@ -1,5 +1,7 @@
 .header {
-    background: var(--g300);
+    background: var(--g200);
+    border-bottom: 1px solid var(--g400);
+
     user-select: auto;
     align-self: stretch;
 
