--- a/frontend/src/pages/scratch/[slug]/family.module.scss
+++ b/frontend/src/pages/scratch/[slug]/family.module.scss
@@ -7,7 +7,8 @@
 
 .header {
     width: 100%;
-    background: var(--g300);
+    background: var(--g200);
+    border-bottom: 1px solid var(--g400);
 }
 
 .actions {
