--- a/frontend/src/components/ProjectHeader.module.scss
+++ b/frontend/src/components/ProjectHeader.module.scss
@@ -8,8 +8,9 @@
         padding: 1em;
         margin: 0 auto;
 
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: auto 1fr;
+        align-items: center;
         gap: 16px;
     }
 
@@ -33,6 +34,8 @@
 }
 
 .metadata {
+    margin-top: 8px;
+
     display: flex;
     gap: 24px;
 
