--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -2,7 +2,7 @@
 
 :root {
     --link: #58a6ff;
-    --danger: #e63a3a;
+    --danger: #ff0000;
     --monospace: "Menlo", "Monaco", monospace;
     --font-ui: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
