--- a/frontend/src/components/ProjectSettings.module.scss
+++ b/frontend/src/components/ProjectSettings.module.scss
@@ -33,7 +33,7 @@
         transition: border-color 0.1s ease;
 
         &:focus {
-            border-color: currentColor;
+            border-color: currentcolor;
         }
     }
 }
