--- a/frontend/src/components/Scratch/ScratchToolbar.module.scss
+++ b/frontend/src/components/Scratch/ScratchToolbar.module.scss
@@ -1,24 +1,44 @@
+$size: 64px;
+$padding: 4px;
+
 .toolbar {
-    display: flex;
-    flex-direction: row;
+    $innerSize: $size - $padding * 2;
+
+    display: grid;
+    grid-template-columns: $innerSize 1fr auto;
     align-items: stretch;
     justify-content: space-between;
+    gap: $padding;
 
     width: 100%;
+
+    padding: $padding;
+
+    background: var(--g300);
+}
+
+.frog {
+    padding: 10px;
+
+    a {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .right {
     display: flex;
-    flex-direction: row;
     align-items: center;
+    justify-content: flex-end;
 
-    gap: 8px;
-
-    flex-shrink: 0;
+    padding: 10px;
 }
 
-.grow {
-    flex: 1;
+.columnSpaceAround {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .name {
@@ -51,83 +71,143 @@
 }
 
 .breadcrumbs {
-    padding: 0 8px;
+    padding: 0 $padding;
 
     display: flex;
     align-items: center;
+}
 
-    // Hide owner on small widths
+.actions {
+    $gap: 4px;
+
+    list-style: none;
+
+    font-size: 12px;
+
+    display: flex;
+    gap: 8px;
+
     @media (max-width: 800px) {
-        li::before,
-        li:not(:last-child) {
-            display: none !important;
+        flex-direction: column;
+        gap: $gap;
+    }
+
+    > ul {
+        // On same line on large widths
+        @media (min-width: 800px) {
+            display: inline-flex;
+            align-items: center;
+
+            // Separator
+            &:not(:last-child) {
+                &::after {
+                    content: "";
+                    display: inline-block;
+                    width: 1px;
+                    height: 1em;
+                    margin-left: $gap;
+                    background: var(--g500);
+                }
+            }
+        }
+
+        > li {
+            display: inline-block;
+
+            color: var(--g1900);
+            cursor: pointer;
+
+            button,
+            a {
+                display: flex;
+                align-items: center;
+                gap: 4px;
+                padding: 4px 8px;
+
+                cursor: pointer;
+
+                background: none;
+                border: 0;
+
+                svg {
+                    width: 1em;
+                    color: var(--g1200);
+                }
+
+                &[disabled] {
+                    color: var(--g700);
+                    cursor: default;
+
+                    svg {
+                        color: inherit;
+                    }
+                }
+
+                &:not([disabled]):hover {
+                    border-radius: 4px;
+                    color: var(--g2000);
+                    background: var(--g400);
+                }
+            }
         }
     }
 }
 
-.actions {
-    list-style: none;
-
-    padding: 0 4px;
-
-    font-size: 12px;
-
-    background: var(--g300);
-
+.iconNamePair {
     display: flex;
     align-items: center;
+    gap: 4px;
+}
 
-    > li {
+.actionsContainer {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.lastEditTime {
+    font-size: 12px;
+    color: var(--g1200);
+
+    @media (max-width: 800px) {
+        display: none;
+    }
+}
+
+.owner {
+    line-height: 20px;
+    padding: 4px 0;
+
+    position: relative;
+
+    .ownerAvatar {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        transform: translateY(-50%);
+    }
+
+    &::before {
+        content: "";
         display: inline-block;
+        width: 26px;
+    }
+}
 
-        color: var(--g1600);
-        cursor: pointer;
+// Hide owner name and breadcrumb separator, i.e. just show the owner avatar
+@media (max-width: 600px) {
+    .breadcrumbs li::before {
+        visibility: hidden;
+        margin: 0 !important;
+    }
 
-        &:hover {
-            color: var(--g2000);
+    @media (max-width: 800px) {
+        .ownerName {
+            display: none;
         }
 
-        &.separator {
-            width: 1px;
-            height: 16px;
-            margin: 0 4px;
-
-            background: var(--g500);
-        }
-
-        button {
-            display: flex;
-            align-items: center;
-            gap: 4px;
-            padding: 8px;
-
-            cursor: pointer;
-
-            background: none;
-            border: 0;
-
-            &[disabled] {
-                opacity: 0.5;
-                cursor: default;
-            }
-
-            svg {
-                width: 1em;
-            }
-
-            // On small widths, only show the icon
-            @media (max-width: 600px) {
-                padding: 6px 2px;
-
-                // Hide text
-                text-indent: -9999px;
-                color: transparent;
-
-                svg {
-                    width: 1.5em;
-                    color: var(--g1400);
-                }
-            }
+        .owner::before {
+            width: 20px;
         }
     }
 }
