fit ScratchToolbar on one line where possible

--- a/frontend/src/components/Breadcrumbs.module.scss
+++ b/frontend/src/components/Breadcrumbs.module.scss
@@ -8,7 +8,7 @@
         list-style: none;
 
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         align-items: stretch;
 
         // Page links
