--- a/frontend/src/components/Breadcrumbs.module.scss
+++ b/frontend/src/components/Breadcrumbs.module.scss
@@ -8,7 +8,7 @@
         list-style: none;
 
         display: flex;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         align-items: stretch;
 
         // Page links
@@ -38,7 +38,7 @@
             content: "";
 
             display: inline-block;
-            margin: 0 0.7em;
+            margin: 0 0.7em 0 0.4em;
 
             width: 0.5em;
             height: 0.5em;
