try and fix svh issue on chrome android

--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -109,6 +109,7 @@ body.no-scroll {
     overflow: hidden;
 
     #__next {
+        height: -webkit-fill-available;
         height: 100svh;
     }
 }
