--- a/frontend/src/components/NumberInput.module.scss
+++ b/frontend/src/components/NumberInput.module.scss
@@ -4,6 +4,7 @@
     padding: 0.08em;
 
     cursor: text;
+    user-select: none;
 
     &.disabled {
         cursor: default;
@@ -12,7 +13,7 @@
     &:focus,
     &:not(.disabled):hover {
         outline: none;
-        border-bottom: 0;
+        border-bottom-color: transparent;
         background: var(--g300);
     }
 }
