--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -1,7 +1,8 @@
 @use "./theme.scss" as theme;
 
 :root {
-    --link: #3db8e9;
+    --link: #58a6ff;
+    --danger: #f00;
     --monospace: "Menlo", "Monaco", monospace;
     --font-ui: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
 }
