use stretch instead of old-spec fill-available

--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -110,7 +110,7 @@ body.no-scroll {
     overflow: hidden;
 
     #__next {
-        height: fill-available;
+        height: stretch;
         height: 100svh;
     }
 }
