--- a/frontend/src/pages/_app.scss
+++ b/frontend/src/pages/_app.scss
@@ -1,18 +1,20 @@
 @use "./theme.scss" as theme;
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
     --link: #58a6ff;
     --danger: #f00;
     --monospace: "Menlo", "Monaco", monospace;
     --font-ui: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica", "Arial", sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-}
 
-.theme-dark {
-    @include theme.theme(#951fd9, #292f33);
-}
-
-.theme-light {
     @include theme.theme(#951fd9, #ffffff);
+}
+
+.dark {
+    @include theme.theme(#951fd9, #292f33);
 }
 
 html {
@@ -75,6 +77,7 @@ body:not(.device-macos) {
     }
 }
 
+// not used in app/ dir
 #__next {
     display: flex;
     flex-direction: column;
@@ -91,15 +94,6 @@ body:not(.device-macos) {
 main {
     flex: 1;
     width: 100%;
-}
-
-main,
-footer {
-    background: var(--g200);
-}
-
-::selection {
-    background: var(--a100);
 }
 
 .routerProgressBar {
